--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,20 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Friday May 28th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Due to holiday. RL duties took over yesterday. I cooked a nice cod dish for 7 people. Spicy hot, garlic roasted potato, Buttery ginger walnut carrots, cod with traditional white wine sauce flavored with thyme and dill.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Finally, investigate pass by reference & pass by value.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>Pass by reference & value added to as misc-entry</li>
+  </ol>
+  <hr />
   <h2 class="date">Saturday May 27th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Moar! Things are progressing! Not utilizing ES6 enough in my code, though. Will do Dan Wellman's ES6 exercises today.</h3>
