--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,23 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Tuesday May 30th, 2017</h2>
+  <h4 class="sleep">Slept: ? hours</h4><br><br>
+  <h3 class="subtitle">Placeholder</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>A couple more examples of map() / some() / filter() codewars is a great resource.</li>
+    <li>Would like to start using ternaries in the place of if/else statements in order to become more nimble.</li>
+    <li><a href="https://www.codewars.com/kata/54b42f9314d9229fd6000d9c/solutions/javascript">Codewars Baby!</a> Incredible fun.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+
   <h2 class="date">Friday May 28th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Due to holiday. RL duties took over yesterday. I cooked a nice cod dish for 7 people. Spicy hot, garlic roasted potato, Buttery ginger walnut carrots, cod with traditional white wine sauce flavored with thyme and dill.</h3>
@@ -26,6 +43,8 @@
   <h3>To do:</h3>
   <ol class="todo">
     <li>Finally, investigate pass by reference & pass by value.</li>
+    <li>Back to basics of closures. Discovered ES6's spread operator...</li>
+
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
