--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -19,8 +19,8 @@
     <hr />
   -->
   <h2 class="date">Tuesday May 30th, 2017</h2>
-  <h4 class="sleep">Slept: ? hours</h4><br><br>
-  <h3 class="subtitle">Placeholder</h3>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Lots of work revisiting closures. Javascript page is significantly larger and sluggish. Ought, sometime, to begin looking into page-weight. --This ought to be a SPA after all.</h3>
 
   <br>
   <h3>To do:</h3>
