sql edits & cleanup

--- a/states/sass/sass.html
+++ b/states/sass/sass.html
@@ -3,7 +3,7 @@
 <div class="sass-entry entry">
 <div class="framed1"><h3 class="chtitle ltgreen">Using calc() with css variables</h3>
 
-You can calc and var() to time a delay with a var declared on :root
+You can employ calc and var() as a time time a delay with the variable declared on :root
 
 Here, it is used as a multiplicand on animation-delay
 
